feat: adapt to latest version of SIP7
